# backend/api/v1/captcha_behavioral_api.go
@@ -11,10 +11,13 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/gin-gonic/gin/binding"
 )
+
 // @Tags 验证码API
 // @Summary 获取图片人机验证码
 // @Description 获取图片人机验证码
-// @Success 200 {object} result.Result
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} result.Result{data=response.CaptchaResponse} "图片验证码"
 // @Router /v1/captcha/behavioral/images [get]
 func GetImagesBehavioralCaptcha(ctx *gin.Context) {
 
@@ -32,7 +35,10 @@ func GetImagesBehavioralCaptcha(ctx *gin.Context) {
 // @Tags 验证码API
 // @Summary 校验图片人机验证码
 // @Description 校验图片人机验证码
-// @Success 200 {object} result.Result
+// @Accept  json
+// @Produce  json
+// @param p body params.VerityCaptchaParams true "pa"
+// @Success 200 {object} result.Result ""
 // @Router /v1/captcha/behavioral/images/verity [post]
 func Verity(ctx *gin.Context) {
 	p := params.VerityCaptchaParams{}
@@ -53,7 +59,7 @@ func Verity(ctx *gin.Context) {
 	}
 
 	ctx.JSON(http.StatusOK, result.Fail(err.Error()))
-	
+
 }
 
 func init() {
