# backend/api/v1/shortcode_api.go
@@ -15,6 +15,7 @@ import (
 // @Tags 短链接API
 // @Summary 生成短链接
 // @Description 生成短链接
+// @param p body params.GenShortCodeParams true "param"
 // @Success 200 {object} result.Result
 // @Router /v1/shortCode [post]
 func GenShortCode(ctx *gin.Context) {
